// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> and toggles the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 joiBwf"
>
  <div
    class="card__Container-s87lnr-1 loiHHk"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-13 cpuBAK"
    >
      <div
        class="card__Item-s87lnr-7 jdtXaQ"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-5 jCAyxD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 ihSQyl"
        >
          <p
            class="card__SubTitle-s87lnr-3 dGLDfc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 cQOEyZ"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 loiHHk"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-13 cpuBAK"
    >
      <div
        class="card__Item-s87lnr-7 jdtXaQ"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-5 jCAyxD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 ihSQyl"
        >
          <p
            class="card__SubTitle-s87lnr-3 dGLDfc"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 cQOEyZ"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 joiBwf"
>
  <div
    class="card__Container-s87lnr-1 loiHHk"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-13 cpuBAK"
    >
      <div
        class="card__Item-s87lnr-7 jdtXaQ"
      >
        <img
          class="card__Image-s87lnr-5 jCAyxD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 ihSQyl"
        >
          <p
            class="card__SubTitle-s87lnr-3 dGLDfc"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 cQOEyZ"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 loiHHk"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-13 cpuBAK"
    >
      <div
        class="card__Item-s87lnr-7 jdtXaQ"
      >
        <img
          class="card__Image-s87lnr-5 jCAyxD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 ihSQyl"
        >
          <p
            class="card__SubTitle-s87lnr-3 dGLDfc"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 cQOEyZ"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
